mailu/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailu-front
  namespace: mailu
  labels:
    app: mailu
    component: admin
spec:
  rules:
    - host: mail.jemand771.net
      http:
        paths:
          - backend:
              service:
                name: mailu-front
                port:
                  number: 80
            path: /
            pathType: Prefix
